# rowset

./: .babelrc  .dockerignore  .env.example  .eslintrc  .gitignore  .stylelintrc.json  AGENTS.md  ANALYTICS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile-python  GEMINI.md  Makefile  PRODUCT.md  README.md  SELF_HOSTING.md  STRUCTURE.md  TECH.md  VISION.md  conftest.py  djass-manifest.json  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-test.yml  eslint.config.js  manage.py  package-lock.json  package.json  posthog-mcp-analytics-report.md  posthog-setup-report.md  project-metadata.json  pyproject.toml  pytest.ini  render.yaml  seo-config.json  tailwind.config.js
.cursor/: mcp.json
.cursor/rules/: django_snippets.mdc  product.mdc  project-steering.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-workers.yml  deploy.yml  publish.yml  release-cutter.yml  reviewgate.yml
.greptile/: config.json
.seo/: brand.md  config.json  content-ledger.md  keyword-research.json  link-inventory.md
.seo/briefs/: agent-managed-datasets.md  ai-agent-audit-trail.md  ai-agent-crm.md  ai-agent-memory-vs-state.md  ai-agent-task-management.md  ai-data-cleaning-agent.md  airtable-alternatives.md  baserow-alternatives.md  choose-index-column-agent-rows.md  connect-ai-agent-to-dataset-api.md  database-for-ai-agents.md  google-sheets-alternatives.md  human-in-the-loop-ai-agents.md  idempotent-ai-agent-updates.md  mcp-database-phase-9.md  mcp-vs-rest-ai-agents.md  nocodb-alternatives.md  relationship-modeling-agent-datasets.md  rowset-id-vs-business-keys.md  rowset-vs-airtable.md  rowset-vs-google-sheets.md  share-ai-agent-data-safely.md  spreadsheet-database-for-ai-agents.md  structure-dataset-instructions-ai-agents.md
apps/api/: auth.py  errors.py  row_contracts.py  row_mutations.py  schemas.py  services.py  tests.py  utils.py  views.py
apps/blog/: README.md  __init__.py  admin.py  checks.py  model_typing.py  models.py  services.py  tests.py  urls.py  views.py
apps/core/: __init__.py  admin.py  admin_dashboard.py  agent_skill.py  ai_observability.py  analytics.py  attribution.py  capabilities.py  choices.py  context_processors.py  forms.py  middleware.py  model_typing.py  model_utils.py  models.py  post_deploy_smoke.py  post_deploy_smoke_auth.py  services.py  signals.py  site_config.py  stripe_webhooks.py  tasks.py  trials.py  urls.py  utils.py  views.py
apps/dataset_plugins/: admin.py  apps.py  builtin.py  models.py  registry.py  rendering.py  services.py  views.py
apps/datasets/: admin.py  choices.py  constants.py  embeddings.py  google_sheets.py  history.py  model_typing.py  models.py  public_previews.py  services.py  tasks.py  types.py  urls.py  vector_indexing.py  vector_search.py  vector_tasks.py  views.py
apps/docs/: AGENTS.md  navigation.yaml  tests.py  urls.py  views.py
apps/mcp_server/: analytics.py  apps.py  auth.py  models.py  oauth.py  server.py  (+3 more)
cli/: README.md  go.mod
deployment/: Dockerfile  Dockerfile.server  Dockerfile.workers  backup_tools.py  entrypoint.sh  healthcheck.py  platform_smoke.py  resolve-image-digest.sh  smoke-image-platforms.sh  verify-anonymous-image.sh  verify-image-platforms.sh  verify-immutable-image-tag.sh  verify-production-compose.sh
docs/: agent-task-templates.md  coverage.md  marketing-analytics.md  quality.md  self-host-sizing.md  seo-sprint.md  typing.md
evaluations/: __init__.py
filebridge/: adapters.py  asgi.py  sentry_metrics.py  settings.py  sitemaps.py  urls.py  utils.py  wsgi.py
frontend/: README.md
rowset/: adapters.py  asgi.py  logging_context.py  mcp_logging.py  pgsandbox_tests.py  posthog_logging.py  public_request_context.py  request_logging.py  sentry_metrics.py  sentry_utils.py  settings.py  sitemaps.py  storages.py  task_logging.py  traffic.py  traffic_analytics.py  urls.py  utils.py  wsgi.py
scripts/: agent-eval-seed.py  build-assets.mjs  build-self-host-release.sh  check-quality-drift.py  ci-local.sh  install-rowset-cli.sh  install-rowset-self-host.sh  native-stack.sh  next-release-tag.sh  startup-smoke.py  verify-self-host-release-contract.sh
(+489 files in other folders)
