[project]
name = "rowset"
version = "0.1.0"
description = "MCP and REST datasets for AI agents."
authors = [{ name = "Rasul Kireev", email = "rasul@lvtd.dev" }]
requires-python = ">=3.14,<4.0"
dependencies = [
    "cryptography>=48.0.1",
    "django>=6.0.5",
    "django-allauth>=65.16.1",
    "django-anymail>=15.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-ninja>=1.6.2",
    "django-q2>=1.10.0",
    "django-storages>=1.14.6",
    "django-structlog>=10.0.0",
    "django-widget-tweaks>=1.5.1",
    "fastmcp>=3.2.4",
    "fido2>=2.2.0,<3",
    "gunicorn>=26.0.0",
    "ipython>=9.13.0",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "polars>=1.40.1",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-webpack-boilerplate>=1.0.4",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "uvicorn-worker>=0.4.0",
    "whitenoise>=6.12.0",
    "sentry-sdk>=2.59.0",
    "structlog-sentry>=2.2.1",

    "posthog>=7.14.0",

    "stripe>=15.1.0",

    "django-mjml>=1.5",

    "pydantic-ai>=1.93.0",
    "pgvector>=0.4.2",
    "qdrant-client>=1.18.0",

    "logfire>=4.32.1",

    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "pygments>=2.20.0",
    "boto3>=1.43.34",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "DJ",   # django-specific rules
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H021,H011,T002"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
