[project]
name = "rowset"
version = "0.1.0"
description = "MCP and REST datasets for AI agents."
authors = [{ name = "Rasul Kireev", email = "rasul@lvtd.dev" }]
requires-python = ">=3.14,<4.0"
dependencies = [
    "cryptography>=49.0.0",
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "django-anymail>=15.0",
    "django-environ>=0.14.0",
    "django-htmx>=1.27.0",
    "django-ninja>=1.6.2",
    "django-q2>=1.10.0",
    "django-storages>=1.14.6",
    "django-structlog>=10.1.0",
    "django-widget-tweaks>=1.5.1",
    "fastmcp>=3.4.2",
    "fido2>=2.2.1,<3",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "psycopg[binary]>=3.3.4",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "apprise>=1.11.0",
    "structlog>=26.1.0",
    "uvicorn-worker>=0.4.0",
    "whitenoise>=6.12.0",
    "sentry-sdk>=2.64.0",
    "structlog-sentry>=2.2.1",

    "posthog>=7.21.2",

    "stripe>=15.3.0",

    "django-mjml>=1.5",

    "pydantic-ai-slim[openai]>=2.2.0",
    "qdrant-client>=1.18.0",

    "logfire>=4.37.0",
    "starlette>=1.3.1",

    "python-frontmatter>=1.3.0",  # import name: frontmatter
    "pyyaml>=6.0.3",
    "pygments>=2.20.0",
    "boto3>=1.43.38",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "djlint>=1.40.0",
    "ipython>=9.15.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "DJ",   # django-specific rules
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H021,H011,T002"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
